--- a/snippets/product-info.liquid
+++ b/snippets/product-info.liquid
@@ -92,7 +92,7 @@
         {%- endif -%}
         {%- unless product.selected_or_first_available_variant.available -%}
           <span class="label label--subdued">{{ 'collection.product.sold_out' | t }}</span>
-        {%- elsif product.selected_or_first_available_variant.quantity < 5 -%}
+        {%- elsif product.selected_or_first_available_variant.inventory_quantity < 5 -%}
             <span class="label label--subdued">{{ 'collection.product.almost_sold_out' | t }}</span>
         {%- endunless -%}
       </div>
