--- a/snippets/product-form.liquid
+++ b/snippets/product-form.liquid
@@ -548,7 +548,7 @@
   {%- if buy_buttons_block == blank -%}
     {%- form 'product', product, is: 'product-form', id: product_form_id -%}
       <input type="hidden" disabled name="id" value="{{ product.selected_or_first_available_variant.id }}">
-      {%- if product.selected_or_first_available_variant.metafields.custom.private_sale_price -%}
+      {%- if product.selected_or_first_available_variant.metafields.custom.private_sale_price > 0 -%}
         <input type="hidden" name="properties[_private_sale_price]" value="{{ product.selected_or_first_available_variant.custom.private_sale_price }}">
       {%- endif -%}
     {%- endform -%}
