--- a/snippets/product-form.liquid
+++ b/snippets/product-form.liquid
@@ -491,7 +491,7 @@
                 <input type="hidden" form="{{ product_form_id }}" name="properties[{{ 'product.form.pre_order_property' | t }}]" value="{{ product.selected_or_first_available_variant.metafields.custom.delivery_date }}">
               {%- endif -%}
               {%- if product.selected_or_first_available_variant.metafields.custom.private_sale_price -%}
-                <input type="hidden" name="properties[_private_sale_price]" value="{{ product.selected_or_first_available_variant.metafields.custom.private_sale_price.[0] }}">
+                <input type="hidden" name="properties[_private_sale_price]" value="{{ product.selected_or_first_available_variant.metafields.custom.private_sale_price }}">
               {%- endif -%}
               <product-payment-container form-id="{{ product_form_id }}" {% if update_url %}id="MainPaymentContainer"{% endif %} class="product-form__payment-container" {{ block.shopify_attributes }}>
                 <button id="AddToCart" type="submit" is="loader-button" {% unless block.settings.show_payment_button and template.suffix != 'quick-buy-popover' %}data-use-primary{% endunless %} data-product-add-to-cart-button data-button-content="{% if product.template_suffix == 'pre-order' %}{{ 'product.form.pre_order' | t | escape }}{% else %}{{ 'product.form.add_to_cart' | t | escape }}{% endif %}" class="product-form__add-button button {% unless product.selected_or_first_available_variant.available %}button--ternary{% else %}{% if block.settings.show_payment_button and template.suffix != 'quick-buy-popover' %}button--primary{% else %}button--primary{% endif %}{% endunless %} button--full" {% unless product.selected_or_first_available_variant.available %}disabled{% endunless %}>
