--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -112,7 +112,24 @@
 
           <div class="product-item-meta__price-list-container" role="region" aria-live="polite">
             <div class="price-list" data-product-price-list>
-              {%- if product.selected_or_first_available_variant.compare_at_price > product.selected_or_first_available_variant.price -%}
+              {%- if customer and product.selected_or_first_available_variant.compare_at_price < product.selected_or_first_available_variant.price -%}
+                <span class="price price--highlight">
+                  <span class="visually-hidden">{{ 'product.general.sale_price' | t }}</span>
+                  {%- if settings.currency_code_enabled -%}
+                    {{- product.selected_or_first_available_variant.compare_at_price | money_with_currency -}}
+                  {%- else -%}
+                    {{- product.selected_or_first_available_variant.compare_at_price | money -}}
+                  {%- endif -%}
+                </span>
+                <span class="price price--compare">
+                  <span class="visually-hidden">{{ 'product.general.regular_price' | t }}</span>
+                  {%- if settings.currency_code_enabled -%}
+                    {{- product.selected_or_first_available_variant.price | money_with_currency -}}
+                  {%- else -%}
+                    {{- product.selected_or_first_available_variant.price | money -}}
+                  {%- endif -%}
+                </span>
+              {%- elsif product.selected_or_first_available_variant.compare_at_price > product.selected_or_first_available_variant.price -%}
                 <span class="price price--highlight">
                   <span class="visually-hidden">{{ 'product.general.sale_price' | t }}</span>
                   {%- if settings.currency_code_enabled -%}
@@ -121,10 +138,8 @@
                     {{- product.selected_or_first_available_variant.price | money -}}
                   {%- endif -%}
                 </span>
-
                 <span class="price price--compare">
                   <span class="visually-hidden">{{ 'product.general.regular_price' | t }}</span>
-
                   {%- if settings.currency_code_enabled -%}
                     {{- product.selected_or_first_available_variant.compare_at_price | money_with_currency -}}
                   {%- else -%}
@@ -134,7 +149,6 @@
               {%- else -%}
                 <span class="price">
                   <span class="visually-hidden">{{ 'product.general.sale_price' | t }}</span>
-
                   {%- if settings.currency_code_enabled -%}
                     {{- product.selected_or_first_available_variant.price | money_with_currency -}}
                   {%- else -%}
