--- a/snippets/product-info.liquid
+++ b/snippets/product-info.liquid
@@ -35,6 +35,23 @@
 
     <div class="product-meta__price-list-container" role="region" aria-live="polite">
       <div class="price-list" data-product-price-list>
+        {%- if customer and product.selected_or_first_available_variant.compare_at_price < product.selected_or_first_available_variant.price -%}
+          <span class="price price--highlight price--large">
+            <span class="visually-hidden">{{ 'product.general.sale_price' | t }}</span>
+            {%- if settings.currency_code_enabled -%}
+              {{- product.selected_or_first_available_variant.compare_at_price | money_with_currency -}}
+            {%- else -%}
+              {{- product.selected_or_first_available_variant.compare_at_price | money -}}
+            {%- endif -%}
+          </span>
+          <span class="price price--compare">
+            <span class="visually-hidden">{{ 'product.general.regular_price' | t }}</span>
+            {%- if settings.currency_code_enabled -%}
+              {{- product.selected_or_first_available_variant.price | money_with_currency -}}
+            {%- else -%}
+              {{- product.selected_or_first_available_variant.price | money -}}
+            {%- endif -%}
+          </span>
         {%- if product.selected_or_first_available_variant.compare_at_price > product.selected_or_first_available_variant.price -%}
           <span class="price price--highlight price--large">
             <span class="visually-hidden">{{ 'product.general.sale_price' | t }}</span>
@@ -44,10 +61,8 @@
               {{- product.selected_or_first_available_variant.price | money -}}
             {%- endif -%}
           </span>
-
           <span class="price price--compare">
             <span class="visually-hidden">{{ 'product.general.regular_price' | t }}</span>
-
             {%- if settings.currency_code_enabled -%}
               {{- product.selected_or_first_available_variant.compare_at_price | money_with_currency -}}
             {%- else -%}
