Changes product info

--- a/snippets/product-info.liquid
+++ b/snippets/product-info.liquid
@@ -97,7 +97,14 @@
       </div>
 
       <div class="product-meta__label-list label-list" data-product-label-list>
-        {%- if product.selected_or_first_available_variant.compare_at_price > product.selected_or_first_available_variant.price -%}
+        {%- if product.selected_or_first_available_variant.compare_at_price < product.selected_or_first_available_variant.price -%}
+          {%- if settings.discount_mode == 'percentage' -%}
+            {%- assign savings = product.selected_or_first_available_variant.price | minus: product.selected_or_first_available_variant.compare_at_price | times: 100.0 | divided_by: product.selected_or_first_available_variant.price | round | append: '%' -%}
+          {%- else -%}
+            {%- capture savings -%}{{ product.selected_or_first_available_variant.price | minus: product.selected_or_first_available_variant.compare_at_price | money }}{%- endcapture -%}
+          {%- endif -%}
+          <span class="label label--highlight">{{ 'collection.product.discount_html' | t: savings: savings }}</span>
+        {%- elsif product.selected_or_first_available_variant.compare_at_price > product.selected_or_first_available_variant.price -%}
           {%- if settings.discount_mode == 'percentage' -%}
             {%- assign savings = product.selected_or_first_available_variant.compare_at_price | minus: product.selected_or_first_available_variant.price | times: 100.0 | divided_by: product.selected_or_first_available_variant.compare_at_price | round | append: '%' -%}
           {%- else -%}
