--- a/snippets/product-item.liquid
+++ b/snippets/product-item.liquid
@@ -135,25 +135,24 @@
       <div class="product-item-meta__price-list-container">
         <div class="price-list price-list--centered">
           {%- if product.price_varies and product.compare_at_price -%}
-            {%- assign cheapest_variant = product.variants | sort: 'price' | first -%}
-
+           
             {%- capture price_min -%}
               {%- if settings.currency_code_enabled -%}
-                {{- cheapest_variant.price | money_with_currency -}}
+                {{- product.price | money_with_currency -}}
               {%- else -%}
-                {{- cheapest_variant.price | money -}}
+                {{- product.price | money -}}
               {%- endif -%}
             {%- endcapture -%}
 
             {%- capture compare_at_price_min -%}
               {%- if settings.currency_code_enabled -%}
-                {{- cheapest_variant.compare_at_price | money_with_currency -}}
+                {{- product.compare_at_price | money_with_currency -}}
               {%- else -%}
-                {{- cheapest_variant.compare_at_price | money -}}
+                {{- product.compare_at_price | money -}}
               {%- endif -%}
             {%- endcapture -%}
 
-            {%- if customer and cheapest_variant.price > cheapest_variant.compare_at_price -%}
+            {%- if customer and product.price > product.compare_at_price -%}
               <span class="price price--highlight">
                 <span class="visually-hidden">{{ 'product.general.sale_price' | t }}</span>
                 {{- 'collection.product.from_price_html' | t: price_min: compare_at_price_min -}}
@@ -163,12 +162,12 @@
                 <span class="visually-hidden">{{ 'product.general.regular_price' | t }}</span>
 
                 {%- if settings.currency_code_enabled -%}
-                  {{- cheapest_variant.price | money_with_currency -}}
+                  {{- product.price | money_with_currency -}}
                 {%- else -%}
-                  {{- cheapest_variant.price | money -}}
+                  {{- product__image.price | money -}}
                 {%- endif -%}
               </span>
-            {%- elsif cheapest_variant.price < cheapest_variant.compare_at_price -%}
+            {%- elsif product.price < product.compare_at_price -%}
               <span class="price price--highlight">
                 <span class="visually-hidden">{{ 'product.general.sale_price' | t }}</span>
                 {{- 'collection.product.from_price_html' | t: price_min: price_min -}}
@@ -178,9 +177,9 @@
                 <span class="visually-hidden">{{ 'product.general.regular_price' | t }}</span>
 
                 {%- if settings.currency_code_enabled -%}
-                  {{- cheapest_variant.compare_at_price | money_with_currency -}}
+                  {{- product.compare_at_price | money_with_currency -}}
                 {%- else -%}
-                  {{- cheapest_variant.compare_at_price | money -}}
+                  {{- product.compare_at_price | money -}}
                 {%- endif -%}
               </span>
             {%- else -%}
