--- a/snippets/product-item.liquid
+++ b/snippets/product-item.liquid
@@ -21,17 +21,15 @@
       <span class="label label--subdued">{{ 'collection.product.almost_sold_out' | t }}</span>
     {%- endunless -%}
 
-    {%- assign cheapest_variant = product.variants | sort: 'price' | first -%}
-
     {%- if settings.show_discount and product.available %}
-      {%- if customer and product.compare_at_price and product.price > product.compare_at_price and cheapest_variant.price != blank -%}
+      {%- if customer and product.compare_at_price and product.price > product.compare_at_price and product.price != blank -%}
         {%- if settings.discount_mode == 'percentage' -%}
           {%- assign savings = product.price | minus: product.compare_at_price | times: 100.0 | divided_by: product.price | round | append: '%' -%}
         {%- else -%}
           {%- capture savings -%}{{ product.price | minus: product.compare_at_price | money }}{%- endcapture -%}
         {%- endif -%}
         <span class="label label--highlight">{{ 'collection.product.discount_html' | t: savings: savings }}</span>
-      {%- elsif product.price < product.compare_at_price and cheapest_variant.compare_at_price != blank -%}
+      {%- elsif product.price < product.compare_at_price and product.compare_at_price != blank -%}
         {%- if settings.discount_mode == 'percentage' -%}
           {%- assign savings = product.compare_at_price | minus: product.price | times: 100.0 | divided_by: product.compare_at_price | round | append: '%' -%}
         {%- else -%}
@@ -339,17 +337,16 @@
                       {%- endfor -%}
                       {%- unless grouped_product.available -%}
                         <span class="label label--subdued">{{ 'collection.product.sold_out' | t }}</span>
-                      {%- endunless -%}
-                      {%- assign cheapest_variant = grouped_product.variants | sort: 'price' | first -%}           
+                      {%- endunless -%}  
                       {%- if settings.show_discount and grouped_product.available -%}
-                        {%- if grouped_product.price > grouped_product.compare_at_price and cheapest_variant.compare_at_price != blank -%}
+                        {%- if grouped_product.price > grouped_product.compare_at_price and grouped_product.compare_at_price != blank -%}
                           {%- if settings.discount_mode == 'percentage' -%}
                             {%- assign savings = grouped_product.price | minus: grouped_product.compare_at_price | times: 100.0 | divided_by: grouped_product.price | round | append: '%' -%}
                           {%- else -%}
                             {%- capture savings -%}{{ grouped_product.price | minus: grouped_product.compare_at_price | money }}{%- endcapture -%}
                           {%- endif -%}      
                           <span class="label label--highlight">{{ 'collection.product.discount_html' | t: savings: savings }}</span>
-                        {%- elsif grouped_product.price < grouped_product.compare_at_price and cheapest_variant.compare_at_price != blank -%}
+                        {%- elsif grouped_product.price < grouped_product.compare_at_price and grouped_product.compare_at_price != blank -%}
                           {%- if settings.discount_mode == 'percentage' -%}
                             {%- assign savings = grouped_product.compare_at_price | minus: grouped_product.price | times: 100.0 | divided_by: grouped_product.compare_at_price | round | append: '%' -%}
                           {%- else -%}
@@ -361,22 +358,21 @@
                     {%- endcapture -%}
                     {%- capture price -%}
                       {%- if grouped_product.price_varies and grouped_product.compare_at_price -%}
-                        {%- assign cheapest_variant = grouped_product.variants | sort: 'price' | first -%}
                         {%- capture price_min -%}
                           {%- if settings.currency_code_enabled -%}
-                            {{- cheapest_variant.price | money_with_currency -}}
+                            {{- grouped_product.price | money_with_currency -}}
                           {%- else -%}
-                            {{- cheapest_variant.price | money -}}
+                            {{- grouped_product.price | money -}}
                           {%- endif -%}
                         {%- endcapture -%}  
                         {%- capture compare_at_price_min -%}
                           {%- if settings.currency_code_enabled -%}
-                            {{- cheapest_variant.compare_at_price | money_with_currency -}}
+                            {{- grouped_product.compare_at_price | money_with_currency -}}
                           {%- else -%}
-                            {{- cheapest_variant.compare_at_price | money -}}
+                            {{- grouped_product.compare_at_price | money -}}
                           {%- endif -%}
                         {%- endcapture -%}    
-                        {%- if customer and cheapest_variant.price > cheapest_variant.compare_at_price -%}
+                        {%- if customer and grouped_product.price > grouped_product.compare_at_price -%}
                           <span class="price price--highlight">
                             <span class="visually-hidden">{{ 'product.general.sale_price' | t }}</span>
                             {{- 'collection.product.from_price_html' | t: price_min: comapre_at_price_min -}}
@@ -384,12 +380,12 @@
                           <span class="price price--compare">
                             <span class="visually-hidden">{{ 'product.general.regular_price' | t }}</span>   
                             {%- if settings.currency_code_enabled -%}
-                              {{- cheapest_variant.price | money_with_currency -}}
+                              {{- grouped_product.price | money_with_currency -}}
                             {%- else -%}
-                              {{- cheapest_variant.price | money -}}
+                              {{- grouped_product.price | money -}}
                             {%- endif -%}
                           </span>
-                        {%- elsif cheapest_variant.price < cheapest_variant.compare_at_price -%}
+                        {%- elsif grouped_product.price < grouped_product.compare_at_price -%}
                           <span class="price price--highlight">
                             <span class="visually-hidden">{{ 'product.general.sale_price' | t }}</span>
                             {{- 'collection.product.from_price_html' | t: price_min: price_min -}}
@@ -397,9 +393,9 @@
                           <span class="price price--compare">
                             <span class="visually-hidden">{{ 'product.general.regular_price' | t }}</span>   
                             {%- if settings.currency_code_enabled -%}
-                              {{- cheapest_variant.compare_at_price | money_with_currency -}}
+                              {{- grouped_product.compare_at_price | money_with_currency -}}
                             {%- else -%}
-                              {{- cheapest_variant.compare_at_price | money -}}
+                              {{- grouped_product.compare_at_price | money -}}
                             {%- endif -%}
                           </span>
                         {%- else -%}
@@ -558,16 +554,15 @@
                             {%- unless product.available -%}
                               <span class="label label--subdued">{{ 'collection.product.sold_out' | t }}</span>
                             {%- endunless -%}
-                            {%- assign cheapest_variant = product.variants | sort: 'price' | first -%}           
                             {%- if settings.show_discount and product.available -%} 
-                              {%- if customer and product.price > product.compare_at_price and cheapest_variant.price != blank -%}
+                              {%- if customer and product.price > product.compare_at_price and product.price != blank -%}
                                 {%- if settings.discount_mode == 'percentage' -%}
                                   {%- assign savings = product.price | minus: product.compare_at_price | times: 100.0 | divided_by: product.price | round | append: '%' -%}
                                 {%- else -%}
                                   {%- capture savings -%}{{ product.price | minus: product.compare_at_price | money }}{%- endcapture -%}
                                 {%- endif -%}      
                                 <span class="label label--highlight">{{ 'collection.product.discount_html' | t: savings: savings }}</span>
-                              {%- elsif product.price < product.compare_at_price and cheapest_variant.compare_at_price != blank -%}
+                              {%- elsif product.price < product.compare_at_price and product.compare_at_price != blank -%}
                                 {%- if settings.discount_mode == 'percentage' -%}
                                   {%- assign savings = product.compare_at_price | minus: product.price | times: 100.0 | divided_by: product.compare_at_price | round | append: '%' -%}
                                 {%- else -%}
@@ -579,22 +574,21 @@
                           {%- endcapture -%}
                           {%- capture price -%}
                             {%- if product.price_varies and product.compare_at_price -%}
-                              {%- assign cheapest_variant = product.variants | sort: 'price' | first -%}
                               {%- capture price_min -%}
                                 {%- if settings.currency_code_enabled -%}
-                                  {{- cheapest_variant.price | money_with_currency -}}
+                                  {{- product.price | money_with_currency -}}
                                 {%- else -%}
-                                  {{- cheapest_variant.price | money -}}
+                                  {{- product.price | money -}}
                                 {%- endif -%}
                               {%- endcapture -%}  
                               {%- capture compare_at_price_min -%}
                                 {%- if settings.currency_code_enabled -%}
-                                  {{- cheapest_variant.compare_at_price | money_with_currency -}}
+                                  {{- product.compare_at_price | money_with_currency -}}
                                 {%- else -%}
-                                  {{- cheapest_variant.compare_at_price | money -}}
+                                  {{- product.compare_at_price | money -}}
                                 {%- endif -%}
                               {%- endcapture -%}    
-                              {%- if customer and cheapest_variant.price > cheapest_variant.compare_at_price -%}
+                              {%- if customer and product.price > product.compare_at_price -%}
                                 <span class="price price--highlight">
                                   <span class="visually-hidden">{{ 'product.general.sale_price' | t }}</span>
                                   {{- 'collection.product.from_price_html' | t: price_min: compare_at_price_min -}}
@@ -602,12 +596,12 @@
                                 <span class="price price--compare">
                                   <span class="visually-hidden">{{ 'product.general.regular_price' | t }}</span>   
                                   {%- if settings.currency_code_enabled -%}
-                                    {{- cheapest_variant.price | money_with_currency -}}
+                                    {{- product.price | money_with_currency -}}
                                   {%- else -%}
-                                    {{- cheapest_variant.price | money -}}
+                                    {{- product.price | money -}}
                                   {%- endif -%}
                                 </span>
-                              {%- elsif cheapest_variant.price < cheapest_variant.compare_at_price -%}
+                              {%- elsif product.price < product.compare_at_price -%}
                                 <span class="price price--highlight">
                                   <span class="visually-hidden">{{ 'product.general.sale_price' | t }}</span>
                                   {{- 'collection.product.from_price_html' | t: price_min: price_min -}}
@@ -615,9 +609,9 @@
                                 <span class="price price--compare">
                                   <span class="visually-hidden">{{ 'product.general.regular_price' | t }}</span>   
                                   {%- if settings.currency_code_enabled -%}
-                                    {{- cheapest_variant.compare_at_price | money_with_currency -}}
+                                    {{- product.compare_at_price | money_with_currency -}}
                                   {%- else -%}
-                                    {{- cheapest_variant.compare_at_price | money -}}
+                                    {{- product.compare_at_price | money -}}
                                   {%- endif -%}
                                 </span>
                               {%- else -%}
