--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -37,99 +37,199 @@
   }
 </style>
 
-{%- if section.blocks.size > 0 -%}
-  <section>
-    <announcement-bar {% if section.blocks.size > 1 and section.settings.autoplay %}auto-play cycle-speed="{{ section.settings.cycle_speed | escape }}"{% endif %} class="announcement-bar {% if section.blocks.size > 1 %}announcement-bar--multiple{% endif %}">
-      {%- if section.blocks.size > 1 -%}
-        <button data-action="prev" class="tap-area tap-area--large">
-          <span class="visually-hidden">{{ 'general.accessibility.previous' | t }}</span>
-          {% render 'icon' with 'nav-arrow-left-small', direction_aware: true %}
-        </button>
-      {%- endif -%}
+{%- if section.settings.announcement_bar_type == "carousel" -%}
+  {%- if section.blocks.size > 0 -%}
+    <section>
+      <announcement-bar {% if section.blocks.size > 1 and section.settings.autoplay %}auto-play cycle-speed="{{ section.settings.cycle_speed | escape }}"{% endif %} class="announcement-bar {% if section.blocks.size > 1 %}announcement-bar--multiple{% endif %}">
+        {%- if section.blocks.size > 1 -%}
+          <button data-action="prev" class="tap-area tap-area--large">
+            <span class="visually-hidden">{{ 'general.accessibility.previous' | t }}</span>
+            {% render 'icon' with 'nav-arrow-left-small', direction_aware: true %}
+          </button>
+        {%- endif -%}
 
-      <div class="announcement-bar__list">
-        {%- for block in section.blocks -%}
-          {%- assign has_extra_content = false -%}
-
-          {%- if block.settings.content != blank or block.settings.image != blank -%}
-            {%- assign has_extra_content = true -%}
-          {%- endif -%}
-
-          <announcement-bar-item {% unless forloop.first %}hidden{% endunless %} {% if has_extra_content %}has-content{% endif %} class="announcement-bar__item" {{ block.shopify_attributes }}>
-            {%- case section.settings.announcement_text_size -%}
-              {%- when 'small' -%}
-                {%- assign text_size_class = 'text--xsmall' -%}
-              {%- when 'normal' -%}
-                {%- assign text_size_class = 'text--small' -%}
-              {%- when 'large' -%}
-                {%- assign text_size_class = '' -%}
-            {%- endcase -%}
-
-            <div class="announcement-bar__message {{ text_size_class }}">
-              {%- if block.settings.content != blank or block.settings.image != blank -%}
-                {%- if block.settings.learn_more_text != blank -%}
-                  <p>{{ block.settings.text | escape }} <button class="link" data-action="open-content">{{ block.settings.learn_more_text | escape }}</button></p>
-                {%- else -%}
-                  <button class="link" data-action="open-content">{{ block.settings.text | escape }}</button>
-                {%- endif -%}
-              {%- else -%}
-                <p>{{ block.settings.text | escape }}</p>
-              {%- endif -%}
-            </div>
+        <div class="announcement-bar__list">
+          {%- for block in section.blocks -%}
+            {%- assign has_extra_content = false -%}
 
             {%- if block.settings.content != blank or block.settings.image != blank -%}
-              <div hidden class="announcement-bar__content {% if block.settings.image != blank %}has-image{% endif %}">
-                <div class="announcement-bar__content-overlay"></div>
+              {%- assign has_extra_content = true -%}
+            {%- endif -%}
 
-                <div class="announcement-bar__content-overflow">
-                  <div class="announcement-bar__content-inner">
-                    <button type="button" class="announcement-bar__close-button tap-area" data-action="close-content">
-                      <span class="visually-hidden">{{ 'general.accessibility.close' | t }}</span>
-                      {%- render 'icon' with 'close' -%}
-                    </button>
+            <announcement-bar-item {% unless forloop.first %}hidden{% endunless %} {% if has_extra_content %}has-content{% endif %} class="announcement-bar__item" {{ block.shopify_attributes }}>
+              {%- case section.settings.announcement_text_size -%}
+                {%- when 'small' -%}
+                  {%- assign text_size_class = 'text--xsmall' -%}
+                {%- when 'normal' -%}
+                  {%- assign text_size_class = 'text--small' -%}
+                {%- when 'large' -%}
+                  {%- assign text_size_class = '' -%}
+              {%- endcase -%}
 
-                    {%- if block.settings.image != blank -%}
-                      <img class="announcement-bar__content-image" loading="lazy" sizes="{% if block.settings.content != blank %}50vw{% else %}100vw{% endif %}" {% render 'image-attributes', image: block.settings.image, sizes: '400,500,600,700,800,900,1000,1200,1400,1600,1800,2000,2200,2400,2600,2800,3000' %}>
-                    {%- endif -%}
+              <div class="announcement-bar__message {{ text_size_class }}">
+                {%- if block.settings.content != blank or block.settings.image != blank -%}
+                  {%- if block.settings.learn_more_text != blank -%}
+                    <p>{{ block.settings.text | escape }} <button class="link" data-action="open-content">{{ block.settings.learn_more_text | escape }}</button></p>
+                  {%- else -%}
+                    <button class="link" data-action="open-content">{{ block.settings.text | escape }}</button>
+                  {%- endif -%}
+                {%- else -%}
+                  <p>{{ block.settings.text | escape }}</p>
+                {%- endif -%}
+              </div>
 
-                    {%- if block.settings.content != blank -%}
-                      <div class="announcement-bar__content-text-wrapper">
-                        <div class="announcement-bar__content-text text-container">
-                          {%- if block.settings.title != blank -%}
-                            <h3 class="heading h5">{{ block.settings.title | escape }}</h3>
-                          {%- endif -%}
+              {%- if block.settings.content != blank or block.settings.image != blank -%}
+                <div hidden class="announcement-bar__content {% if block.settings.image != blank %}has-image{% endif %}">
+                  <div class="announcement-bar__content-overlay"></div>
 
-                          {%- if block.settings.content != blank -%}
-                            {{- block.settings.content -}}
-                          {%- endif -%}
+                  <div class="announcement-bar__content-overflow">
+                    <div class="announcement-bar__content-inner">
+                      <button type="button" class="announcement-bar__close-button tap-area" data-action="close-content">
+                        <span class="visually-hidden">{{ 'general.accessibility.close' | t }}</span>
+                        {%- render 'icon' with 'close' -%}
+                      </button>
 
-                          {%- if block.settings.button_text != blank -%}
-                            <div class="button-wrapper">
-                              <a href="{{ block.settings.button_link }}" class="button button--primary">{{ block.settings.button_text | escape }}</a>
-                            </div>
-                          {%- endif -%}
+                      {%- if block.settings.image != blank -%}
+                        <img class="announcement-bar__content-image" loading="lazy" sizes="{% if block.settings.content != blank %}50vw{% else %}100vw{% endif %}" {% render 'image-attributes', image: block.settings.image, sizes: '400,500,600,700,800,900,1000,1200,1400,1600,1800,2000,2200,2400,2600,2800,3000' %}>
+                      {%- endif -%}
+
+                      {%- if block.settings.content != blank -%}
+                        <div class="announcement-bar__content-text-wrapper">
+                          <div class="announcement-bar__content-text text-container">
+                            {%- if block.settings.title != blank -%}
+                              <h3 class="heading h5">{{ block.settings.title | escape }}</h3>
+                            {%- endif -%}
+
+                            {%- if block.settings.content != blank -%}
+                              {{- block.settings.content -}}
+                            {%- endif -%}
+
+                            {%- if block.settings.button_text != blank -%}
+                              <div class="button-wrapper">
+                                <a href="{{ block.settings.button_link }}" class="button button--primary">{{ block.settings.button_text | escape }}</a>
+                              </div>
+                            {%- endif -%}
+                          </div>
                         </div>
-                      </div>
-                    {%- endif -%}
+                      {%- endif -%}
+                    </div>
                   </div>
                 </div>
+              {%- endif -%}
+            </announcement-bar-item>
+          {%- endfor -%}
+        </div>
+
+        {%- if section.blocks.size > 1 -%}
+          <button data-action="next" class="tap-area tap-area--large">
+            <span class="visually-hidden">{{ 'general.accessibility.next' | t }}</span>
+            {% render 'icon' with 'nav-arrow-right-small', direction_aware: true %}
+          </button>
+        {%- endif -%}
+      </announcement-bar>
+    </section>
+
+    <script>
+      document.documentElement.style.setProperty('--announcement-bar-height', document.getElementById('shopify-section-{{ section.id }}').clientHeight + 'px');
+    </script>
+  {%- endif -%}
+{%- else -%}
+  <section>
+    <div class="announcement-bar">
+      <div class="flex-items">
+        <div class="copies">
+            <div class="line-1"><strong>BIENTÔT : JUSQU’À -40 % SUR TOUT LE SITE</strong></div>
+            <div class="separator"></div>
+            <div class="line-2">25 NOVEMBRE · SOYEZ PRÊTS</div>
+        </div>
+        <div class="flex-items">
+          <div id="timerContainer" end-date="2022-11-24T20:59:59.000Z" class="flex-container-row">
+              <span class="timer-text">BLACK FRIDAY DÉBUTE DANS</span>
+              <div id="timer" class="clock-container">
+                  <div class="clock-number"><span id="days"></span>
+                      <p class="clock-text">Jours</p>
+                  </div>
+                  <span class="separation-clock">:</span>
+                  <div class="clock-number"><span id="hours"></span>
+                      <p class="clock-text">Heure</p>
+                  </div>
+                  <span class="separation-clock">:</span>
+                  <div class="clock-number"><span id="minutes"></span>
+                      <p class="clock-text">Min.</p>   
+                  </div>
+                  <span class="separation-clock">:</span>
+                  <div class="clock-number"><span id="seconds"></span>
+                      <p class="clock-text">Sec.</p>
+                  </div>
               </div>
-            {%- endif -%}
-          </announcement-bar-item>
-        {%- endfor -%}
+          </div>
+        </div>
       </div>
-
-      {%- if section.blocks.size > 1 -%}
-        <button data-action="next" class="tap-area tap-area--large">
-          <span class="visually-hidden">{{ 'general.accessibility.next' | t }}</span>
-          {% render 'icon' with 'nav-arrow-right-small', direction_aware: true %}
-        </button>
-      {%- endif -%}
-    </announcement-bar>
+    </div>
   </section>
-
   <script>
     document.documentElement.style.setProperty('--announcement-bar-height', document.getElementById('shopify-section-{{ section.id }}').clientHeight + 'px');
+    window.onload = function () {
+      let endDate = document.getElementById('timerContainer').getAttribute('end-date')
+      if (endDate && endDate !== '') {
+        initializeClock(endDate)
+      }
+    }
+    
+    function initializeClock(endTime) {
+      const daysSpan = document.getElementById('days')
+      const hoursSpan = document.getElementById('hours')
+      const minutesSpan = document.getElementById('minutes')
+      const secondsSpan = document.getElementById('seconds')
+    
+      const timeinterval = setInterval(updateClock, 1000)
+      updateClock()
+    
+      function isCountingDays() {
+        let date = new Date().toISOString();
+        let startCountingDays = "2022-11-21T08:00:00Z";
+        let endsCountingDays = "2022-11-29T04:59:59Z";
+        if ( 
+          (Date.parse(startCountingDays) < Date.parse(date))
+          && (Date.parse(endsCountingDays) > Date.parse(date))
+        )  return true
+        return false
+      }
+    
+      function updateClock() {
+        const t = getTimeRemaining(endTime)
+    
+        daysSpan.innerHTML = isCountingDays() ? ('0' + t.days).slice(-2) : '00';
+        hoursSpan.innerHTML = ('0' + t.hours).slice(-2)
+        minutesSpan.innerHTML = ('0' + t.minutes).slice(-2)
+        secondsSpan.innerHTML = ('0' + t.seconds).slice(-2)
+    
+        if (t.total <= 0) {
+          daysSpan.innerHTML = '00'
+          hoursSpan.innerHTML = '00'
+          minutesSpan.innerHTML = '00'
+          secondsSpan.innerHTML = '00'
+    
+          clearInterval(timeinterval)
+        }
+      }
+    }
+    
+    function getTimeRemaining(endTime) {
+      const total = Date.parse(endTime) - Date.parse(new Date().toISOString())
+      const seconds = Math.floor((total / 1000) % 60)
+      const minutes = Math.floor((total / 1000 / 60) % 60)
+      const hours = Math.floor((total / (1000 * 60 * 60)) % 24)
+      const days = Math.floor(total / (1000 * 60 * 60 * 24))
+    
+      return {
+        total,
+        days,
+        hours,
+        minutes,
+        seconds,
+      }
+    }
   </script>
 {%- endif -%}
 
@@ -192,6 +292,22 @@
   "settings": [
     {
       "type": "select",
+      "id": "announcement_bar_type",
+      "label": "Type",
+      "options": [
+        {
+          "value": "carousel",
+          "label": "Carousel"
+        },
+        {
+          "value": "countdown",
+          "label": "Countdown"
+        }
+      ],
+      "default": "carousel"
+    },
+    {
+      "type": "select",
       "id": "announcement_bar_position",
       "label": "Position",
       "options": [
@@ -249,6 +365,16 @@
       "unit": "sec",
       "label": "Change message every",
       "default": 5
+    },
+    {
+      "type": "header",
+      "content": "Countdown"
+    },
+    {
+      "type": "text",
+      "id": "date_picker",
+      "label": "Choose date and hour",
+      "info": "e.g. 2022-11-24T20:59:59.000Z"
     },
     {
       "type": "header",
