--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -373,17 +373,17 @@
     {
       "type": "text",
       "id": "line_1",
-      "label": "Line 1",
+      "label": "Line 1"
     },
     {
       "type": "text",
       "id": "line_2",
-      "label": "Line 2",
+      "label": "Line 2"
     },
     {
       "type": "text",
       "id": "timer_text",
-      "label": "Timer text",
+      "label": "Timer text"
     },
     {
       "type": "text",
